# voodoo

arduino/voodoo/: DynamicHID.cpp  DynamicHID.h  HIDController.cpp  HIDController.h  voodoo.ino
catkin_ws/: .clang-format
catkin_ws/src/voodoo/: CMakeLists.txt  package.xml
catkin_ws/src/voodoo/config/: example.yaml  sirius.yaml
catkin_ws/src/voodoo/include/voodoo/: IO.h  voodoo.h
catkin_ws/src/voodoo/launch/: sirius_voodoo.launch  voodoo.launch
catkin_ws/src/voodoo/src/: IO.cpp  voodoo.cpp  voodoo_node.cpp
catkin_ws/src/voodoo/urdf/: manipulator.urdf.xacro
