<?xml version="1.0"?>
<package format="2">
  <name>voodoo</name>
  <version>0.0.0</version>
  <description>Software for voodoo robotic arm controller</description>

  <maintainer email="zebromek@gmail.com">Tomek Zebrowski</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
